Update deprecated instance